[gd_scene load_steps=8 format=3 uid="uid://x8v5sn3r48ds"]

[ext_resource type="PackedScene" uid="uid://1pjkocxmqavc" path="res://GUI/fullscreen_gui_template.tscn" id="1_6g3lx"]
[ext_resource type="Script" uid="uid://b5nkbp7yhqqn8" path="res://GUI/FieldMenu/sub_menu_status.gd" id="2_eybfd"]
[ext_resource type="Texture2D" uid="uid://kmhhevuxuqq3" path="res://Battle Scene/Art/Map-ninepatch.png" id="3_ff0i1"]
[ext_resource type="Script" uid="uid://plpi353s56jf" path="res://Battle Scene/Menu Assets/menu.gd" id="4_4rqck"]
[ext_resource type="Script" uid="uid://nobsfibutlnb" path="res://GUI/menu.gd" id="4_85gcj"]
[ext_resource type="PackedScene" uid="uid://dj75xopcs8key" path="res://GUI/FieldMenu/stat_h_box.tscn" id="5_008ks"]
[ext_resource type="PackedScene" uid="uid://rk4ossv6s3pd" path="res://GUI/FieldMenu/player_equipment_window.tscn" id="5_85gcj"]

[node name="SubMenuStatus" instance=ExtResource("1_6g3lx")]
custom_minimum_size = Vector2(320, 180)
script = ExtResource("2_eybfd")

[node name="Middle" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE" index="0"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.18
texture = ExtResource("3_ff0i1")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("4_85gcj")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PUT_MENU_HERE/Middle" index="0"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer" index="0"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="PlayerEquipmentWindow" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource("5_85gcj")]
layout_mode = 2
size_flags_horizontal = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Stats" type="GridContainer" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
columns = 2
script = ExtResource("4_4rqck")

[node name="StatHBox" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="0" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox7" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="1" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox8" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="2" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox2" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="3" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox3" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="4" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox4" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="5" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox5" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="6" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="StatHBox6" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/Stats" index="7" instance=ExtResource("5_008ks")]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer" index="1"]
custom_minimum_size = Vector2(64, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("3_ff0i1")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/NinePatchRect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/NinePatchRect/MarginContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE" index="1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.73
texture = ExtResource("3_ff0i1")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PUT_MENU_HERE/Description" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PUT_MENU_HERE/Description/MarginContainer" index="0"]
layout_mode = 2
text = "Description Description Description"

[connection signal="player_changed" from="MarginContainer/PUT_MENU_HERE/Middle/MarginContainer/VBoxContainer/HBoxContainer/PlayerEquipmentWindow" to="." method="_on_player_changed"]
